--- a/tsheet/package.json
+++ b/tsheet/package.json
@@ -26,7 +26,7 @@
     "materialize-css": "^0.97.8",
     "bootstrap-sass": "^3.3.7",
     "font-awesome": "^4.6.3",
-    "jquery": "^2.2.0",
+    "jquery": "~> 3.0.0.",
     "node-sass": "^3.8.0",
     "onchange": "^2.5.0"
   }
